--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
 
-<p>This animal is short and chubby just like me! It loves fish and the cold. I agree with the Penguins lifestyle.</p>
+<p>This animal is short and chubby just like me! It loves fish and the cold. I agree with the lifestyle of a Penguin.</p>
 
 <img src=https://images.mentalfloss.com/sites/default/files/styles/mf_image_16x9/public/istock-511366776.jpg?itok=cWhdWNZ8&resize=200x200"" alt="">
     
